# atlas

./: CMakeLists.txt  README.md
src/: atlas.hpp  block_range.hpp  multi_array.hpp  multi_indexer.hpp  range.hpp  splitarray.hpp  util.hpp
src/gpu/: cuda_base.hpp  cuda_mock.cpp  cuda_mock.hpp  cuda_multi_array.hpp  cuda_raw_ptr.hpp
test/: check-concept.cpp  sample-cuda.cpp  test-array.cpp  test-indexer.cpp  test-split.cpp
